# AetherFlow

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/.claude/plans/: 005-integrate-enriched-pipeline.md
backend/alembic/: env.py
backend/alembic/versions/: 20260410_0001_bootstrap.py  (+5 more)
backend/app/: __init__.py  config.py  http_client.py  main.py
backend/scripts/: __init__.py  acceptance_browser_agent.py  acceptance_regression_gate.py  batch_ui_acceptance.py  verify_lightpanda_cdp.py
backend/tests/: conftest.py  test_acceptance_browser_agent.py  test_announcement_api.py  test_announcement_runtime.py  test_announcement_schema_contract.py  test_app_boot.py  test_artifact_api.py  test_artifact_store.py  test_browser_agent_integration.py  test_browser_agent_llm.py  test_browser_infra.py  test_candidate_generator.py  test_candidate_scoring.py  test_canonical.py  test_chain_tracker.py  test_cve_agent_decisions.py  test_cve_agent_evidence.py  test_cve_agent_graph.py  test_cve_agent_policy.py  test_cve_agent_schema_contract.py  test_cve_agent_search_tools.py  test_cve_agent_skills.py  test_cve_api.py  test_cve_detail_service.py  test_cve_llm_fallback.py  test_cve_regressions.py  test_cve_runtime.py  test_cve_schema_contract.py  test_db_session.py  test_dev_scripts.py  test_health_summary.py  test_http_client.py  test_migrations.py  test_navigation.py  test_openwall_adapter.py  test_page_analyzer.py  test_page_fetcher.py  test_patch_downloader.py  test_patch_evidence.py  test_pg_connection.py  (+13 more)
(+369 files in other folders)
